test/fixtures/typecheck/fail/BadAnnotation.lam
module BadAnnotation

data Bool = True | False

foo : Bool
foo = []
